# concordia-server

./: .gitignore  CMakeLists.txt  INSTALL.txt  README.md  TODO.txt  clearIndex.sh  concordia.cfg.in
LemmaGenSockets/: LemmaGenSockets.sln
LemmaGenSockets/LemmaGenSockets/: LemmaGenSockets.csproj  LemmatizerListener.cs  Program.cs
LemmaGenSockets/LemmaGenSockets/Properties/: AssemblyInfo.cs
cat/: README  cat.html  concordia_gate.php  concordia_gate.php_pattern  concordia_search.php_pattern  examples.txt  host.cfg_example  index.html  index.html_pattern  index_hr.html  publish.py  republish.sh  tm_info.php_pattern  tm_manager.php_pattern
cat/css/: concordia_cat.css  iatagger.css
cat/js/: cat.js
cat/versions/: jrc_enes.cfg  jrc_plen.cfg  setimes_enhr.cfg  setimes_hren.cfg
cat/versions_available/: europarl_sample.cfg  jrc_enes.cfg  jrc_enpl.cfg  jrc_plen.cfg  setimes_enhr.cfg  setimes_hren.cfg  stocznia_enpl.cfg  stocznia_plen.cfg
cat/versions_enabled/: europarl_sample.cfg  jrc_enpl.cfg  jrc_plen.cfg  setimes_enhr.cfg  stocznia_enpl.cfg  stocznia_plen.cfg
concordia-server/: CMakeLists.txt  aligned_unit.cpp  aligned_unit.hpp  bool_param.cpp  bool_param.hpp  complete_concordia_search_result.cpp  complete_concordia_search_result.hpp  concordia_server.cpp  concordia_server.hpp  concordia_server_process.cpp  config.hpp  config.hpp.in  db_connection.cpp  db_connection.hpp  db_tests.cpp  example_occurence.cpp  example_occurence.hpp  index_controller.cpp  index_controller.hpp  int_array_param.cpp  int_array_param.hpp  int_param.cpp  int_param.hpp  json_generator.cpp  json_generator.hpp  language.cpp  language.hpp  language_dao.cpp  language_dao.hpp  lemmatizer_facade.cpp  lemmatizer_facade.hpp  logger.cpp  logger.hpp  query_param.cpp  query_param.hpp  request.cpp  request.hpp  request_dao.cpp  request_dao.hpp  searcher_controller.cpp  (+13 more)
db/: concordiaDb.sh  concordia_server.sql  connectToPGbouncer.sh  pgbouncer.ini  pgbouncer.ini.in  query.txt  recreateDb.sh  startPGbouncer.sh  users.txt
db/init/: 00_lang.sql
doc/: install.txt
import-requests/: handle_requests.py
mgiza-aligner/: .gitignore  Makefile  build.sh  clean_corpus.py  collect_dict.py  cut.py  extract.py  giza.cfg.pattern  paste.py  sortGizaAlignments.py
mgiza-aligner/LemmaGenSentenceLemmatizer/: LemmaGenSentenceLemmatizer.sln
mgiza-aligner/LemmaGenSentenceLemmatizer/LemmaGenSentenceLemmatizer/: LemmaGenSentenceLemmatizer.csproj  Program.cs  SentenceLemmatizer.cs
mgiza-aligner/LemmaGenSentenceLemmatizer/LemmaGenSentenceLemmatizer/Properties/: AssemblyInfo.cs
mgiza-aligner/corpus-compilator/: Makefile  clear_solr_index.sh  compile.py  get_corpus_lines.py  lem2csv.py  load_corpus.sh  setup_solr.sh
mgiza-aligner/corpus-compilator/dictionaries/: classyf_popular_medicine.txt  popular_medicine_dictionary.txt  test.txt
mgiza-aligner/dictionaries/enhr/: en.bz2  hr.bz2
mgiza-aligner/dictionaries/logofag/: en.bz2  pl.bz2
mgiza-aligner/dictionaries/test/: en.bz2  pl.bz2
mgiza-aligner/europarl/tools/nonbreaking_prefixes/: nonbreaking_prefix.pl
resources/tokenizer/: named_entities.txt
scripts/: restart.sh  start.sh  stop.sh
scripts/cmake_stubs/: restart.sh.in  start.sh.in  stop.sh.in  watchdog.sh.in
tests/: .gitignore  TODO.txt  addAlignedFile.py  addAlignedFileToTM.py  addAlignedLemmatizedTM.py  addFile.py  addJrc.sh  addLemmatizedTM.sh  addSentence.py  addStocznia.sh  addTm.py  addingError.txt  addingError2.txt  concordiaSearch.py  getTmsInfo.py  host.py_example  lemmatizeSentence.py  performanceAdding.txt  simpleSearch.py  test.html  testCurl.sh
tests/remote/: addFile.py  addSentence.py  concordiaSearch.py  generateIndex.py  simpleSearch.py
unit-tests/: concordiaSearchTest.py  request.py  simpleSearchTest.py  testRunner.py
upstart/: README.txt
upstart/cmake_stubs/: concordia-server.conf.in  lemmagen.conf.in  pgbouncer.conf.in
